--- a/src/js/app/elements-view.tpl.html
+++ b/src/js/app/elements-view.tpl.html
@@ -5,5 +5,24 @@
   </form>
 </div>
 <div>
-  Elements
+  <button class="styled-button">BUTTON</button>
+  <div class="list">
+    <div class="item-line item">
+      <div class="ellipsis">
+        item 1 item 1 item 1 item 1 item 1
+      </div>
+    </div>
+    <div class="item-line middle-item-line item">
+      <div class="ellipsis">
+        item 2 item 2 item 2 item 2 item 2
+      </div>
+      <div class="boxes">
+        <div class="box"></div>
+        <div class="box"></div>
+      </div>
+    </div>
+    <div class="item-line item">
+      item 3
+    </div>
+  </div>
 </div>
