--- a/src/js/app/app.tpl.html
+++ b/src/js/app/app.tpl.html
@@ -1,3 +1,3 @@
 <elements-view></elements-view>
-<content-view></content-view>
-<sidebar-view></sidebar-view>
+<content-view title-list="titleList"></content-view>
+<sidebar-view title-item="currentTitleItem"></sidebar-view>
